listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listener-deployment
  labels:
    app: listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listener
  template:
    metadata:
      labels:
        app: listener
    spec:
      containers:
        - name: listener
          image: jpablo1997/listener-app:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: listener-service
spec:
  type: NodePort
  selector:
    app: listener
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30800
