microb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microb-deployment
  labels:
    app: microb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microb
  template:
    metadata:
      labels:
        app: microb
    spec:
      serviceAccountName: sa-microb
      containers:
        - name: microb
          image: jpablo1997/microb-image:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: microb-service
spec:
  type: NodePort
  selector:
    app: microb
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30200
