microc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microc-deployment
  labels:
    app: microc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microc
  template:
    metadata:
      labels:
        app: microc
    spec:
      serviceAccountName: sa-microc
      containers:
        - name: microc
          image: jpablo1997/microc-image:latest
          ports:
          - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: microc-service
spec:
  selector:
    app: microc
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
