microa-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microa-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microa
spec:
  hosts:
  - "*"
  gateways:
  - microa-gateway
  http:
  - match:
    - uri:
        exact: /microserviceC
    - uri:
        exact: /microserviceD
    route:
    - destination:
        host: microa-service.default.svc.cluster.local
        port:
          number: 3000
