microd_authorization_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: microd-ap
 namespace: default
spec:
 selector:
   matchLabels:
     app: microd
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/sa-microb"]
   to:
   - operation:
       methods: ["GET"]
